# ModPlayer3DS

./: .gitignore  CMakeLists.txt  README.md
include/libopenmpt/: libopenmpt_c.d  libopenmpt_cxx.d  libopenmpt_ext_impl.d  libopenmpt_impl.d  libopenmpt_version.rc
meta/: banner.bcwav  boing.cgfx  modplayer3ds.rsf
source/: Playback.cpp  Playback.h  main.cpp
